[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["Dan Chalmers <danc@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pipe = "^1.6.0"
rich = "^10.15.2"
cachetools = "^4.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
